; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_fps_counter.c_display_fps.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_fps_counter.c_display_fps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fps_counter = type { i32, i32 }

@FPS_COUNTER_INTERVAL_MS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"%u fps (+%u frames skipped)\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"%u fps\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fps_counter*)* @display_fps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @display_fps(%struct.fps_counter* %0) #0 {
  %2 = alloca %struct.fps_counter*, align 8
  %3 = alloca i32, align 4
  store %struct.fps_counter* %0, %struct.fps_counter** %2, align 8
  %4 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %5 = getelementptr inbounds %struct.fps_counter, %struct.fps_counter* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = mul nsw i32 %6, 1000
  %8 = load i32, i32* @FPS_COUNTER_INTERVAL_MS, align 4
  %9 = sdiv i32 %7, %8
  store i32 %9, i32* %3, align 4
  %10 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %11 = getelementptr inbounds %struct.fps_counter, %struct.fps_counter* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %1
  %15 = load i32, i32* %3, align 4
  %16 = load %struct.fps_counter*, %struct.fps_counter** %2, align 8
  %17 = getelementptr inbounds %struct.fps_counter, %struct.fps_counter* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 (i8*, i32, ...) @LOGI(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %18)
  br label %23

20:                                               ; preds = %1
  %21 = load i32, i32* %3, align 4
  %22 = call i32 (i8*, i32, ...) @LOGI(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  br label %23

23:                                               ; preds = %20, %14
  ret void
}

declare dso_local i32 @LOGI(i8*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
